--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   http: ^1.5.0
   geolocator: ^14.0.2
   shared_preferences: ^2.0.15
+  firebase_auth: ^6.1.0
+  firebase_core: ^4.1.1
+  cloud_firestore: ^6.0.2
 
 dev_dependencies:
   flutter_test:
