--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^6.1.0
   firebase_core: ^4.1.1
   cloud_firestore: ^6.0.2
+  firebase_database: ^12.0.4
 
 dev_dependencies:
   flutter_test:
